force-app/main/default/objects/IntegrationMessageRoute__mdt/IntegrationMessageRoute__mdt.object-meta.xml
<CustomObject>
    <label>Integration Message Route</label>
    <pluralLabel>Integration Message Route</pluralLabel>
</CustomObject>