force-app/main/default/objects/IntegrationMessageRoute__mdt/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERP_SF</fullName>
                <default>true</default>
                <label>ERP_SF</label>
            </value>
            <value>
                <fullName>SF_ERP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>