force-app/main/default/objects/IntegrationMessageRoute__mdt/fields/MessageCode__c.field-meta.xml
<CustomField>
    <fullName>MessageCode__c</fullName>
    <label>MessageCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>