force-app/main/default/objects/IntegrationMessageRoute__mdt/fields/MessageGroup__c.field-meta.xml
<CustomField>
    <fullName>MessageGroup__c</fullName>
    <label>MessageGroup</label>
    <length>100</length>
    <type>Text</type>
</CustomField>