force-app/main/default/objects/IntegrationMessageRoute__mdt/fields/RequiresAuth__c.field-meta.xml
<CustomField>
    <fullName>RequiresAuth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RequiresAuth</label>
    <type>Checkbox</type>
</CustomField>